--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,9 +1,11 @@
-cmake_minimum_required(VERSION 3.0)
+cmake_minimum_required(VERSION 2.8)
 project(SocksTunnelLocal)
 
+#add -DNDEBUG to enable release version
+#add -DFOREGROUND_START to start in foreground, mmm...use for debug
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -DNDEBUG")
 
-set(LINKLIB ev event pthread crypto z)
+set(LINKLIB ev event pthread crypto z log4cpp)
 
 set(SOURCE_FILES
         src/CommonLib/Atomic.h
